# Thinkshare

./: .dockerignore  .gitattributes  .gitignore  README.md  build-Host.bat  build-Slave.bat  database-reset.bat  index.html  personal cloud computing.sln  run.sh  signalling.py  test.html  test.json
Agent/: Cmd.c  Cmd.h  (+26 more)
Slave/: CMakeLists.txt  CMakeSettings.json  CmakeLists.txt
Slave/SessionLoader/: MainWindow.xaml  MainWindow.xaml.cs  SessionLoader.csproj
Slave/SessionLoader/Interface/: IKeyboardMouseInput.cs  ISessionCoreInitialization.cs  ISessionLoaderClose.cs
Slave/SessionLoader/Service/: KeyboardMouseInput.cs  LoaderPipeSink.cs  LoaderPipeSrc.cs  SessionCoreInitialization.cs  SessionLoaderClose.cs
Slave/SetupProject1/: Product.wxs  SetupProject1.wixproj
Slave/agent/: CmakeLists.txt  Readme.md
Slave/agent/build-vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  cmake_install.cmake
Slave/agent/include/: agent-child-process.h  agent-cmd.h  agent-device.h  agent-ipc.h  agent-message.h  agent-object.h  agent-session-initializer.h  agent-shell-session.h  agent-socket.h  agent-type.h
Slave/agent/source/: CmakeLists.txt  agent-child-process.c  agent-cmd.c  agent-device.c  agent-message.c  agent-object.c  agent-session-initializer.c  agent-shell-session.c  agent-socket.c  agent.vcxproj  agent.vcxproj.filters  cmake_install.cmake  program.c
Slave/build-ninja/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
Slave/build-ninja/agent/: cmake_install.cmake
Slave/remote-app/: CMakeLists.txt
Slave/session-core/: CmakeLists.txt
Slave/shared-items/: child-process-constant.h  child-process-resources-assign.c  child-process-resources-assign.h  error-code.h  exit-code.h  general-constant.h  human-interface-opcode.h  key-convert.c  logging.c  message-form.c  message-form.h  module.h  opcode.h  qoe.h  signalling-message.h
(+2765 files in other folders)
